Fix background gradient in dark mode

--- a/assets/css/extended/custom_.css
+++ b/assets/css/extended/custom_.css
@@ -821,7 +821,7 @@ html:not(.page-index) .index-page-intro-container {
 }
 
 .page-index .dark .index-page-intro-container {
-    background: linear-gradient(180deg, #040404 5%, #081738 50%, var(--header) 100%);
+    background: linear-gradient(180deg, #000000 5%, #051539 50%, #0b0b0bec 100%);
 }
 
 @keyframes rotate360 {
